--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,4 +10,4 @@ spring.datasource.dbcp2.max-total=20
 spring.datasource.dbcp2.min-idle=2
 spring.datasource.dbcp2.max-open-prepared-statements=3000
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
